--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular-devkit/build-angular": "^16.0.0",
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
+    "@types/body-parser": "^1.19.5",
     "@types/bootstrap": "^5.2.9",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
