--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "hammerjs": "^2.0.8",
+    "jasmine": "^5.1.0",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -36,12 +36,16 @@
     "@types/body-parser": "^1.19.5",
     "@types/bootstrap": "^5.2.9",
     "@types/jasmine": "~4.3.0",
+    "@types/jasminewd2": "^2.0.13",
+    "@types/karma": "^6.3.8",
+    "@types/node": "^20.10.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~5.0.2"
+    "tslib": "^2.6.2",
+    "typescript": "^4.9.3"
   }
 }
