--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,4 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
+
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -24,6 +24,12 @@
       "dom"
     ]
   },
+
+  "types": [
+    "jasmine",
+    "node",
+
+  ],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
